add header and about page

--- a/about/index.html
+++ b/about/index.html
@@ -8,7 +8,7 @@
     <link rel="preload" as="font" type="font/woff2" href="/assets/fonts/pt-root-ui_bold.woff2" crossorigin>
     <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="icon" href="/favicon.svg" type="image/svg+xml">
-    <title>Nick Dolf - Full Stack Developer</title>
+    <title>Nick Dolf - About</title>
   </head>
   <body>
     <header class="site-header"><a class="overlay bold-hover" href="/"><span class="delayedFade">Nick Dolf</span><span class="svg-container delayedHide">
@@ -46,90 +46,37 @@
             </path>
           </svg></span><strong class="delayedShow" aria-hidden>Nick Dolf</strong></a><a class="bold-hover" href="/about"> <span>About</span><strong aria-hidden>About</strong></a></header>
     <main>
-      <section class="text"><p>Hi! Welcome to my site! If you'd like to work together please get in contact with me at <a href="mailto:nickdolfatwork@gmail.com">nickdolfatwork@gmail.com</a></p>
+      <section class="intro">
+        <div class="columns">
+          <div class="column-one">
+            <h1>Hi ! I'm Nick Dolf - Full Stack Developer<br> Based in Chicago, IL
+            </h1><p>After being in the coffee world for over 16 years as an operations manager and technician I later discovered my desire for coding and decided to go back to school to fully immerse myself in the field. After earning my Bachelor of Science in Computer Science from Simon Fraser University in 2020 I also moved to Chicago, Illinois to be with my partner and our talkative cuddly cat.</p>
+<p>Since then I have been a developer in different capacities. I designed and developed two artist websites. I am also a volunteer lead developer for Code for Chicago, specifically building a new website for Cannabis Equity Illinois Coalition, which is a local non-profit that helps with expungements for cannabis convictions and advocates for reform. I am also a freelance email developer for Mission Wired, and I do freelance AutoCAD drafting for Measure Masters.</p>
+<p>I am always excited to learn new languages while constantly sharpening the ones I know. Currently, I am working on an open-source CMS and a fitness app, among others to expand my scope and apply my knowledge and experience to professional opportunities.</p>
+<p>In my spare time, I am learning how to play the guitar, work out, learn Spanish, cook and bake, and soak as much sun as I can.</p>
 
-      </section>
-      <section class="grid">
-        <h1>Latest Projects</h1>
-        <div class="grid-container">
-          <div class="card"><a href="https://jadeyumang.com/">
-              <div class="image-container">
-                <picture>
-                  <source type="image/webp" srcset="/assets/images/jadeyumang-1681073281746-600.webp"/><img src="/assets/images/jadeyumang-1681073281746-600.jpg" width="600" height="1289" alt="jadeyumang.com"/>
-                </picture>
-              </div></a>
-            <div class="text-container"><a href="https://github.com/nick-dolf/jade" aria-label="Gitbhub repo">
-                <svg viewbox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-                  <use xlink:href="/assets/svg/sprites.svg#github"></use>
-                </svg></a><p><em>Developer</em><br />Artist portfolio site with a custom CMS generating a static site.</p>
-
-            </div>
-            <div class="skill-container"><span class="pill">HTML</span><span class="pill">SCSS</span><span class="pill">NODE</span><span class="pill">EXPRESS</span><span class="pill">PUG</span><span class="pill">BOOTSTRAP</span><span class="pill">JS</span>
-            </div>
           </div>
-          <div class="card"><a href="https://cannabisequityil.org/">
-              <div class="image-container">
-                <picture>
-                  <source type="image/webp" srcset="/assets/images/ceic-1681073281746-600.webp"/><img src="/assets/images/ceic-1681073281746-600.jpg" width="600" height="1724" alt="ceic"/>
-                </picture>
-              </div></a>
-            <div class="text-container"><a href="https://github.com/Code-For-Chicago/ceic-jekyll" aria-label="Gitbhub repo">
-                <svg viewbox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-                  <use xlink:href="/assets/svg/sprites.svg#github"></use>
-                </svg></a><p><em>Lead Developer</em><br />Local non-profit website with static site generator and headless CMS.</p>
-
-            </div>
-            <div class="skill-container"><span class="pill">HTML</span><span class="pill">SCSS</span><span class="pill">JS</span><span class="pill">JEKYLL</span><span class="pill">LIQUID</span><span class="pill">FORESTRY</span>
-            </div>
-          </div>
-          <div class="card"><a href="https://www.tatlo.info/">
-              <div class="image-container">
-                <picture>
-                  <source type="image/webp" srcset="/assets/images/tatlo-1681073376089-600.webp"/><img src="/assets/images/tatlo-1681073376089-600.jpg" width="600" height="407" alt="tatlo.info"/>
-                </picture>
-              </div></a>
-            <div class="text-container"><a href="https://github.com/nick-dolf/tatlo" aria-label="Gitbhub repo">
-                <svg viewbox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-                  <use xlink:href="/assets/svg/sprites.svg#github"></use>
-                </svg></a><p><em>Developer</em><br />Artist portfolio site with a custom CMS generating a static site.</p>
-
-            </div>
-            <div class="skill-container"><span class="pill">HTML</span><span class="pill">SCSS</span><span class="pill">JS</span><span class="pill">JEKYLL</span><span class="pill">LIQUID</span><span class="pill">FORESTRY</span>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="grid">
-        <h1>Toys</h1>
-        <div class="grid-container">
-          <div class="card"><a href="https://nickdolf.com/toys/putt-putt/">
-              <div class="image-container">
-                <picture>
-                  <source type="image/webp" srcset="/assets/images/putt-putt-1682281550709-600.webp"/><img src="/assets/images/putt-putt-1682281550709-600.jpg" width="600" height="930" alt="Mini putt game"/>
-                </picture>
-              </div></a>
-            <div class="text-container"><a href="https://github.com/nick-dolf/putt-putt" aria-label="Gitbhub repo">
-                <svg viewbox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-                  <use xlink:href="/assets/svg/sprites.svg#github"></use>
-                </svg></a><p>A mini putt game</p>
-
-            </div>
-            <div class="skill-container"><span class="pill">PUG</span><span class="pill">STYLUS</span><span class="pill">PARCEL</span><span class="pill">JS</span>
-            </div>
-          </div>
-          <div class="card"><a href="https://nickdolf.com/color-grid/">
-              <div class="image-container">
-                <picture>
-                  <source type="image/webp" srcset="/assets/images/nickdolfcom_color-grid_-1681692920602-600.webp"/><img src="/assets/images/nickdolfcom_color-grid_-1681692920602-600.jpg" width="600" height="648" alt="Color grid"/>
-                </picture>
-              </div></a>
-            <div class="text-container"><a href="https://github.com/nick-dolf/color-grid" aria-label="Gitbhub repo">
-                <svg viewbox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-                  <use xlink:href="/assets/svg/sprites.svg#github"></use>
-                </svg></a><p>A simple pixel art toy.</p>
-
-            </div>
-            <div class="skill-container"><span class="pill">HTML</span><span class="pill">STYLUS</span><span class="pill">PARCEL</span>
+          <div class="column-two">
+            <picture>
+              <source type="image/webp" srcset="/assets/images/nick_pic_square-1681073301461-300.webp"/><img src="/assets/images/nick_pic_square-1681073301461-300.jpg" width="300" height="300" alt="Nick Dolf"/>
+            </picture>
+            <div class="skills">
+              <p>HTML</p>
+              <p>CSS/SCSS</p>
+              <p>Javascript</p>
+              <p>JQuery</p>
+              <p>Git</p>
+              <p>Linux</p>
+              <p>MongoDb</p>
+              <p>Express</p>
+              <p>React</p>
+              <p>Node</p>
+              <p>Python</p>
+              <p>C/C++</p>
+              <p>PUG</p>
+              <p>Liquid</p>
+              <p>ThreeJS</p>
+              <p>Autocad</p>
             </div>
           </div>
         </div>
